--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-DOCTYPE html>
-<html>
-    <head>
-        <title>Boberick the llama</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Just testing this works!</h1>
-    </body>
-</html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Boberick the llama</title>
@@ -38,8 +29,8 @@ DOCTYPE html>
                     <p>I'm a really awesome llama. Every day I wake up, munch on some grass, do some coding and then go back to sleep.</p>
                     <h3>Achievements</h3>
                     <ul>
-                        <li>The Washington Bus Fellowship, 2019</li>
-                        <li>King County Bar Association Internship, 2019</li>
+                        <li>Bachelor of photogenic posing, 2010</li>
+                        <li>Llamaness certification from the Llama Institute, 2014</li>
                         <li>I coded a website, 2017</li>
                     </ul>
                 </div>
