--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Boberick the llama</title>
+        <title>Andrea Escobar</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
