--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <header>
-            <img src="https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/llama.jpg" class="profile-img">
+            <img src="https://www.facebook.com/photo.php?fbid=2320029544989919&set=a.1375175286142021&type=3&theater class="profile-img">
             <nav>
                 <ul>
                     <li><a href="#hero">Home</a></li>
