--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section id="hero">
                 <div class="section-inner">
                     <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/58961614_2320029548323252_33705133812482048_n.jpg?_nc_cat=110&_nc_oc=AQlLvH-kNUXqGPW5n_yaoVj3PiK1sq-fq9p1O2nVPYuo0wgZRrssJFxUY1tft6_XJw8&_nc_ht=scontent-sea1-1.xx&oh=571ae6112ad07178c4b85e9513273c31&oe=5DBD29BD" class="profile-img">
-                    <h1>Hi, I'm Boberick the llama.</h1>
+                    <h1>Hi, I'm Andrea.</h1>
                 </div>
             </section>
             <section id="about">
